@@ -24,6 +24,7 @@ Available {events}:
 *ColorScheme*        Triggered after a color scheme has been loaded
 *DOMLoad*            Triggered when a page's DOM content has fully loaded
 *DownloadPost*       Triggered when a download has completed
+*Fullscreen*         Triggered when the browser's fullscreen state changes
 *LocationChange*     Triggered when changing tabs or when navigating to a new location
 *PageLoadPre*        Triggered after a page load is initiated.
 *PageLoad*           Triggered when a page gets (re)loaded/opened
